--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.theme-dark {
+    --bg-color: theme(colors.green.100);
+    --text-color: theme(colors.blue.500);
+    --primary: theme(colors.gray.500);
+    --secondary: theme(colors.gray.100);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.theme-light {
+    --bg-color: theme(colors.blue.100);
+    --text-color: theme(colors.red.500);
+    --primary: theme(colors.green.500);
+    --secondary: theme(colors.green.100);
 }
